--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,12 @@ h3 {
 h4 {
   @apply text-base font-bold text-black;
 }
+h5 {
+  @apply mt-10 text-xs font-bold text-purple;
+}
+input[type="text"] {
+  @apply mt-2.5 mb-5 h-[48px] rounded-md border-2 px-5 text-sm font-bold text-black outline-purple active:border-purple;
+}
 @tailwind components;
 @tailwind utilities;
 
