--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,7 +17,7 @@ h5 {
 }
 input,
 select {
-  @apply mt-2.5 mb-5 h-[48px] rounded-md border-2 px-5 text-sm font-bold text-black outline-purple active:border-purple;
+  @apply mt-2.5 mb-5 h-[48px] rounded-md border px-5 text-sm font-bold text-black outline-purple active:border-purple;
 }
 
 @tailwind components;
