fix checkbox styles

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,6 +19,12 @@ input,
 select {
   @apply mt-2.5 mb-5 h-[48px] rounded-md border px-5 text-sm font-bold text-black outline-purple active:border-purple;
 }
+input[type="checkbox"] {
+  @apply cursor-pointer appearance-none rounded-[2px] border-[px] border-transparent bg-light-grey text-purple hover:border-purple focus:ring-transparent;
+}
+[type="checkbox"]:checked {
+  @apply bg-[url("/Invoice_app/assets/icon-check.svg")];
+}
 
 @tailwind components;
 @tailwind utilities;
